<resources>
    <string name="app_name">App ban do an onl</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="mail_response">Mail response</string>
    <string name="application">Application</string>
    <string name="profile">Profile</string>
    <string name="developers">Developers</string>
    <string name="contact">Contact</string>
    <string name="support">Support</string>
    <string name="information">Information</string>
    <string name="logout">Logout</string>
    <string name="user_name">User name</string>
    <string name="open">Open drawer</string>
    <string name="close">Close drawer</string>
    <string name="more_application">More application</string>
    <string name="rice">Rice</string>
    <string name="todo">TODO</string>
    <string name="most_booked">Most booked</string>
    <string name="name_restaurant">Name restaurant</string>
    <string name="name_food">Name food</string>
    <string name="price">Price</string>
    <string name="sale_50">Sale 50%</string>
    <string name="free_ship">Free ship</string>
    <string name="best_selling_food">Best selling food</string>
    <string name="other_food">Other food</string>
    <string name="back_menu">Back menu</string>
    <string name="continue_to_buy">Continue to buy</string>
    <string name="pay_order">Pay order</string>
    <string name="_0">1</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="total_money">Total money:</string>
    <string name="_0_usd">0 USD</string>
    <string name="pay">Pay</string>
    <string name="continue_to_shop">Continue to shop</string>
    <string name="food_cost">Food cost:</string>
    <string name="shipping_fee">Shipping fee:</string>
    <string name="delete_all_carts">Delete all carts</string>
    <string name="please_wait_a_moment">Please wait a moment…</string>
    <string name="money_to_be_paid">Money to be paid:</string>
    <string name="payment_in_cash">Payment in cash</string>
    <string name="or">|</string>
    <string name="payment_by_card">Payment by card</string>
    <string name="enter_your_address">Enter your address…</string>
    <string name="get_your_address">Get your address</string>
    <string name="please_turn_on_location_to_determine_your_location">Please turn on location to determine your location</string>
    <string name="enter_your_note">Enter your note…</string>
    <string name="back">Back</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="click">Click</string>
    <string name="login">Login app</string>
    <string name="enter_the_username">Enter the username</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="login1">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_the_full_name">Enter the full name</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="are_you_have_an_account_login">Are you have an account? Login</string>
    <string name="order_date">Order date</string>
    <string name="see_details">See details</string>
    <string name="order_status">Order status</string>
    <string name="are_shipping">Are shipping</string>
    <string name="arrived">Arrived</string>
    <string name="received">Received</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="evaluate">Evaluate</string>
    <string name="thanks_you_for_your_order">Thanks you for your order</string>
    <string name="send_feedback">Send feedback</string>
    <string name="delete">Delete</string>
    <string name="list_food_favorite">List food favorite</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
</resources>