<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.SeeDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/teal_700"
        android:id="@+id/toolBarSD"
        app:title="See Details"
        app:titleMarginStart="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:textSize="18sp"
                android:padding="10dp"
                android:text="@string/order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_beenhere_24_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_beenhere_24_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_beenhere_24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/are_shipping"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/arrived"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/received"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#595656"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/textViewAddressSD"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/textViewPhoneNumberSD"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#595656"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <LinearLayout
            android:padding="8dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name_food"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewNameFoodSD"
                android:text="@string/name_food"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:padding="8dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/price"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewPriceSD"
                android:text="@string/price"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:padding="8dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/order_date"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewOrderDateSD"
                android:text="@string/order_date"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <View
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#595656"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:textStyle="bold"
            android:layout_gravity ="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/evaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RatingBar
            android:layout_marginTop="10dp"
            android:layout_gravity ="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBarSD"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSendFeedBackSD"
            android:padding="10dp"
            android:background="#DC3A45"
            android:text="@string/send_feedback"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="#f12"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/thanks_you_for_your_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</LinearLayout>