<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageSaleFood"
        android:src="@drawable/background_user"
        android:scaleType="centerCrop"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_verified_user_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textViewNameRestaurantSale"
                android:textSize="16sp"
                android:padding="6dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:text="@string/name_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView
            android:textStyle="bold"
            android:id="@+id/textViewNameFoodSale"
            android:textColor="#f12"
            android:padding="5dp"
            android:textSize="17sp"
            android:text="@string/name_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textViewPriceSale"
            android:padding="5dp"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/textViewSale"
                android:textColor="#f12"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/sale_50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewFreeShip"
                android:textColor="#f12"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/free_ship"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>