<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:background="@drawable/backgroundfood"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/custom_background_login"
        android:layout_marginTop="180dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/teal_700"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textSize="38sp"
            android:text="@string/login"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/userNameLogin"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/passwordLogin"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBarLogin"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/login1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textViewLogin"
            android:textColor="@color/black"
            android:padding="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>