<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageShowDish"
            android:scaleType="centerCrop"
            android:src="@drawable/background_user"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewNameRestaurantShowDish"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="4dp"
                android:text="@string/name_restaurant"
                android:fontFamily="cursive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_baseline_verified_user_24" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/textViewNameFoodShowDish"
                android:padding="5dp"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:text="@string/name_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#f99123"
                    android:id="@+id/textViewPriceShowDish"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:text="@string/price"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/imageViewLove"
                    android:layout_marginStart="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/heart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>